# zuul-config

./: .gitignore  setup.cfg  test.json  tox.ini
containers/: Dockerfile.f39  Dockerfile.f40
nodepool/: nodepool.yaml
nodepool/elements/: package-installs.yaml
nodepool/elements/infra-package-needs/post-install.d/: 80-enable-infra-services
playbooks/: run.yaml
playbooks/base/: post-logs.yaml
playbooks/container/: build-publish-tag.yml
playbooks/openstack-compliance-checks/: flavor-check.yaml  pre-flavor-check.yaml
playbooks/sbom/: pre.yaml  run-containers.yaml  run.yaml
zuul/: main.yaml
zuul.d/: gh_pipelines.yaml  jobs.yaml  projects.yaml  scan-jobs.yaml  secrets.yaml  timer_pipelines.yaml  zuul.yaml
zuul.d/container-images/: base.yaml  fedora.yaml
