[metadata]
name = scs-zuul-config
summary = SCS Zuul Config
description_file =
    README.rst
author = SCS Contributors
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all_files = 1
#build-dir = doc/build
#source-dir = doc/source
warning-is-error = 1
